src/App.css
header {
  padding: 32px 20px;

  #logo {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 12px;

    .logo-img {
      width: 32px;
      height: 32px;
    }

    svg {
      width: 150px;
      height: 150px;
      color: var(--text-h);
    }
  }

  @media (max-width: 1024px) {
    flex-direction: column;
    gap: 16px;
    padding: 16px 20px;
  }
}

.counter {
  font-size: 16px;
  padding: 5px 10px;
  border-radius: 5px;
  color: var(--accent);
  background: var(--accent-bg);
  border: 2px solid transparent;
  transition: border-color 0.3s;
  margin-bottom: 24px;

  &:hover {
    border-color: var(--accent-border);
  }
  &:focus-visible {
    outline: 2px solid var(--accent);
    outline-offset: 2px;
  }
}

.hero {
  position: relative;

  .base,
  .framework,
  .vite {
    inset-inline: 0;
    margin: 0 auto;
  }

  .base {
    width: 170px;
    position: relative;
    z-index: 0;
  }

  .framework,
  .vite {
    position: absolute;
  }

  .framework {
    z-index: 1;
    top: 34px;
    height: 28px;
    transform: perspective(2000px) rotateZ(300deg) rotateX(44deg) rotateY(39deg)
      scale(1.4);
  }

  .vite {
    z-index: 0;
    top: 107px;
    height: 26px;
    width: auto;
    transform: perspective(2000px) rotateZ(300deg) rotateX(40deg) rotateY(39deg)
      scale(0.8);
  }
}

#center {
  display: flex;
  flex-direction: column;
  gap: 10px;
  place-content: center;
  place-items: center;
  flex-grow: 1;

  @media (max-width: 1024px) {
    padding: 32px 20px 24px;
    gap: 18px;
  }
}

#next-steps {
  display: flex;
  border-top: 1px solid var(--border);
  text-align: left;

  & > div {
    flex: 1 1 0;
    padding: 32px;
    @media (max-width: 1024px) {
      padding: 24px 20px;
    }
  }

  .icon {
    margin-bottom: 16px;
    width: 22px;
    height: 22px;
  }

  @media (max-width: 1024px) {
    flex-direction: column;
    text-align: center;
  }
}

#docs {
  border-right: 1px solid var(--border);

  @media (max-width: 1024px) {
    border-right: none;
    border-bottom: 1px solid var(--border);
  }
}

#next-steps ul {
  list-style: none;
  padding: 0;
  display: flex;
  gap: 8px;
  margin: 32px 0 0;

  .logo {
    height: 18px;
  }

  a {
    color: var(--text-h);
    font-size: 16px;
    border-radius: 6px;
    background: var(--social-bg);
    display: flex;
    padding: 6px 12px;
    align-items: center;
    gap: 8px;
    text-decoration: none;
    transition: box-shadow 0.3s;

    &:hover {
      box-shadow: var(--shadow);
    }
    .button-icon {
      height: 18px;
      width: 18px;
    }
  }

  @media (max-width: 1024px) {
    margin-top: 20px;
    flex-wrap: wrap;
    justify-content: center;

    li {
      flex: 1 1 calc(50% - 8px);
    }

    a {
      width: 100%;
      justify-content: center;
      box-sizing: border-box;
    }
  }
}

#spacer {
  height: 88px;
  border-top: 1px solid var(--border);
  @media (max-width: 1024px) {
    height: 48px;
  }
}

.ticks {
  position: relative;
  width: 100%;

  &::before,
  &::after {
    content: '';
    position: absolute;
    top: -4.5px;
    border: 5px solid transparent;
  }

  &::before {
    left: 0;
    border-left-color: var(--border);
  }
  &::after {
    right: 0;
    border-right-color: var(--border);
  }
}

.prices-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 30px;
  margin-top: 32px;

  @media (max-width: 1024px) {
    gap: 20px;
    margin-top: 20px;
    display: flex;
    flex-direction: column;
  }

  .price {
    display: flex;
    flex-direction: column;
    align-items: start;

    .item-heading {
      font-size: 1.75em;
    }

    .image-item {
      display: flex;
      justify-content: center;
      align-items: center;
      min-height: 150px;
      max-height: 600px;
      height: 350px;
      padding-block: 20px;
      width: 100%;
      object-fit: cover;
      border-radius: 8px;
      background-color: green;
    }
  }
}

#get-started {
  margin-bottom: 32px;
  button {
    margin-top: 12px;
    background-color: green;
    box-shadow: none;
    border-color: green;
    border-radius: 200px;
    padding: 12px 24px;
    color: #ffffff;
    font-size: 20px;
  }
}

#challenges {
  .challenge-item {
    margin-top: 40px;

    &.daily-question-challenge {
      form {
        input[type='radio'] {
          height: 20px;
          width: 20px;
          accent-color: green;
        }
      }
    }

    .item-header {
      display: flex;
      align-items: center;
      justify-content: space-between;
      margin-bottom: 12px;
      width: 100%;

      p {
        text-align: right;
      }

      h3 {
        font-size: 32px;
      }
    }
    .item-body {
      padding: 20px;
      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
      border-radius: 8px;
      color: #000000;
      border: 3px solid green;
      padding-block: 24px;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      gap: 15px;
      transition: ease-in-out 0.1s;

      &.approval-challenge {
        min-height: 200px;
      }
      &.challenge-completed {
        background-color: green;
        border: 1px solid #c3e6cb;
        color: #ffffff;
      }

      form {
        .check-input{
          margin-bottom: 10px;
          input[type="checkbox"] {
            height: 20px;
            width: 20px;
          }
          label {
            margin-left: 8px;
            font-size: 20px;
          }
        }
      }
    }
  }
}

#participation {
  margin-block: 40px;
  h3 {
    font-size: 32px;
    margin-bottom: 12px;
  }
  form {
    margin-top: 20px;
  }
  input {
    width: 100%;
    padding: 12px;
    border-radius: 4px;
    border: 1px solid var(--border);
    margin-top: 8px;
    margin-bottom: 16px;
    font-size: 16px;
    box-sizing: border-box;
    cursor: pointer;
  }
}

section.allready-participated {
  font-size: 26px;
  text-align: center;

  @media (max-width: 1024px) {
    font-size: 16px;
    line-height: 24px;
  }
  img {
    margin-bottom: 40px;
    width: 450px;
    height: 450px;

    @media (max-width: 1024px) {
      width: 300px;
      height: 300px;
      margin-bottom: 20px;
    }
  }
  p {
    width: 100%;
  }
}
section.end-page {
  font-size: 26px;
  line-height: 34px;
  text-align: center;

  @media (max-width: 1024px) {
    font-size: 20px;
  }

  .participated-name {
    text-transform: capitalize;
  }
}

section#get-started {
  h3 {
    font-size: 32px;
    margin-bottom: 12px;
  }
  padding-block: 100px;
}

